src/pydjinni/generator/objc/it/objc/error/expected/include/objc/TSTHelper.h
// AUTOGENERATED FILE - DO NOT MODIFY!
// This file was generated by PyDjinni from 'error.pydjinni'
#import <Foundation/Foundation.h>
#import "TSTAsyncThrowingCallback.h"
#import "TSTFooError.h"
#import "TSTThrowingCallback.h"
@interface TSTHelper : NSObject
+ (void)throwingError:(NSError* _Nullable * _Nonnull)error;
+ (void)throwingWithParameters:(NSError* _Nullable * _Nonnull)error;
+ (void)throwingAsync:(nonnull void (^)(NSError* _Nullable))completion;
+ (void)throwingAsyncWithReturnValue:(nonnull void (^)(BOOL , NSError* _Nullable))completion;
+ (void)throwingCallbackError:(nonnull id<TSTThrowingCallback>)callback error:(NSError* _Nullable * _Nonnull)error;
+ (void)throwingAsyncCallbackError:(nonnull id<TSTAsyncThrowingCallback>)callback completion:(nonnull void (^)(NSError* _Nullable))completion;
@end
